# revdeq

./: .gitignore  README.md  pyproject.toml
tests/: test_adjoint.py
